write html structure and content

--- a/index.html
+++ b/index.html
@@ -6,6 +6,89 @@
         <title>Jules B. Hearne Portfolio</title>
     </head>
     <body>
-        
+        <header>
+            <h1>
+                <div class="name"></div>
+                <div class="portfolio"></div>
+            </h1>
+            <nav><a href="./contact.html">Contact Me</a></nav>
+            <div class="self_portrait"><img src="./resources/images/self.jpg" alt="Image of Jules"></div>
+        </header>
+        <section class="intro" id="intro">
+            <h2>Developing New Skills in Programming</h2>
+            <h3></h3>
+            <p>I am currently gaining programming skills through the Codecademy full-stack learning path and other self-directed resources. I am currrently 21% through the full-stack path. I have developed skills in HTML, CSS, JavaScript, Git and GitHub.</p>
+        </section>
+        <section class="contents">
+            <h2>Projects</h2>
+            <nav>
+                <ul>
+                    <li>
+                        <h3><a href="#project01">Mixed Messages</a></h3>
+                        <p>Node.js Program</p>
+                    </li>
+                    <li>
+                        <h3><a href="#project02">Globodrank</a></h3>
+                        <p>Website</p>
+                    </li>
+                    <li>
+                        <h3><a href="#project03">Animal Fight Club</a></h3>
+                        <p>Website</p>
+                    </li>
+                </ul>
+            </nav>
+        </section>
+        <section class="project" id="project01">
+            <img src="./resources/images/mixed_messages.PNG" alt="Mixed Messages Screenshot">
+            <h2>Mixed Messages</h2>
+            <h3>Node.js Program</h3>
+            <ul>
+                <h4>Languages:</h4>
+                <li>JavaScript</li>
+            </ul>
+            <p>This Node.js project parses a list of famous quotes and diplays three mixed up quotes.</p>
+            <nav><a href="https://github.com/jbhearne/Mixed_Messages">GitHub</a></nav>
+        </section>
+        <section class="project" id="project02">
+            <img src="./resources/images/Globodrank.PNG" alt="Globodrank Screenshot">
+            <h2>GloboDrank LLC</h2>
+            <h3>Website for a Fictitional Company</h3>
+            <ul>
+                <h4>Languages:</h4>
+                <li>HTML, CSS</li>
+            </ul>
+            <p>This website was deveoped to make use of the Flexbox model of design</p>
+            <nav><a href=""></a></nav>
+        </section>
+        <section class="project" id="project03">
+            <img src="./resources/images/AFC.PNG" alt="Ainamal Fight Club Screenshot">
+            <h2>Animal Fight Club</h2>
+            <h3>Website for Fictional Club</h3>
+            <ul>
+                <h4>Languages:</h4>
+                <li>HTML, CSS</li>
+            </ul>
+            <p>A website for a fictional club for animals to regain there animal selfs. Makes use of responsive design for different screen sizes.</p>
+            <nav><a href=""></a></nav>
+        </section>
+        <!--<section class="project" id="project03">
+            <img src="" alt="">
+            <h2></h2>
+            <h3></h3>
+            <ul>
+                <h4>Languages:</h4>
+                <li>JavaScript</li>
+            </ul>
+            <p></p>
+            <nav><a href=""></a></nav>
+        </section>-->
+        <section class="more" id="more">
+            <h2>more...</h2>
+            <h3><a href="./projects.html">Projects Page</a></h3>
+        </section>
+        <footer>
+            <div class="copyright">© Jules B. Hearne</div>
+            <nav><a href="./contact.html">Contact Me</a></nav>
+        </footer>
     </body>
 </html>
