--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
     <head>
         <link rel="stylesheet" href="./resources/css/reset.css">
         <link rel="stylesheet" href="./resources/css/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400&family=Kufam:wght@400;700&family=Red+Hat+Text:ital,wght@0,300;0,400;0,700;1,400;1,700&family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
         <title>Jules B. Hearne Portfolio</title>
     </head>
     <body>
         <header>
             <h1>
-                <div class="name"></div>
-                <div class="portfolio"></div>
+                <div class="name">Jules B. Hearne</div>
+                <div class="portfolio">Portfolio</div>
             </h1>
             <nav><a href="./contact.html">Contact Me</a></nav>
             <div class="self_portrait"><img src="./resources/images/self.jpg" alt="Image of Jules"></div>
@@ -40,6 +43,7 @@
         </section>
         <section class="project" id="project01">
             <img src="./resources/images/mixed_messages.PNG" alt="Mixed Messages Screenshot">
+            <div class="details">
             <h2>Mixed Messages</h2>
             <h3>Node.js Program</h3>
             <ul>
@@ -48,20 +52,24 @@
             </ul>
             <p>This Node.js project parses a list of famous quotes and diplays three mixed up quotes.</p>
             <nav><a href="https://github.com/jbhearne/Mixed_Messages">GitHub</a></nav>
+            </div>
         </section>
         <section class="project" id="project02">
             <img src="./resources/images/Globodrank.PNG" alt="Globodrank Screenshot">
-            <h2>GloboDrank LLC</h2>
-            <h3>Website for a Fictitional Company</h3>
-            <ul>
-                <h4>Languages:</h4>
-                <li>HTML, CSS</li>
-            </ul>
-            <p>This website was deveoped to make use of the Flexbox model of design</p>
-            <nav><a href=""></a></nav>
+            <div class="details">
+                <h2>GloboDrank LLC</h2>
+                <h3>Website for a Fictitional Company</h3>
+                <ul>
+                    <h4>Languages:</h4>
+                    <li>HTML, CSS</li>
+                </ul>
+                <p>This website was deveoped to make use of the Flexbox model of design</p>
+                <nav><a href=""></a></nav>
+            </div>
         </section>
         <section class="project" id="project03">
             <img src="./resources/images/AFC.PNG" alt="Ainamal Fight Club Screenshot">
+            <div class="details">
             <h2>Animal Fight Club</h2>
             <h3>Website for Fictional Club</h3>
             <ul>
@@ -70,9 +78,11 @@
             </ul>
             <p>A website for a fictional club for animals to regain there animal selfs. Makes use of responsive design for different screen sizes.</p>
             <nav><a href=""></a></nav>
+            </div>
         </section>
         <!--<section class="project" id="project03">
             <img src="" alt="">
+            <div class="details">
             <h2></h2>
             <h3></h3>
             <ul>
@@ -81,6 +91,7 @@
             </ul>
             <p></p>
             <nav><a href=""></a></nav>
+        </div>
         </section>-->
         <section class="more" id="more">
             <h2>more...</h2>
