--- a/index.html
+++ b/index.html
@@ -58,10 +58,11 @@
             <img src="./resources/images/Globodrank.PNG" alt="Globodrank Screenshot">
             <div class="details">
                 <h2>GloboDrank LLC</h2>
-                <h3>Website for a Fictitional Company</h3>
+                <h3>Website for a Fictional Company</h3>
                 <ul>
                     <h4>Languages:</h4>
-                    <li>HTML, CSS</li>
+                    <li>HTML</li>  
+                    <li>CSS</li>
                 </ul>
                 <p>This website was deveoped to make use of the Flexbox model of design</p>
                 <nav><a href=""></a></nav>
@@ -74,7 +75,8 @@
             <h3>Website for Fictional Club</h3>
             <ul>
                 <h4>Languages:</h4>
-                <li>HTML, CSS</li>
+                <li>HTML</li>
+                <li>CSS</li>
             </ul>
             <p>A website for a fictional club for animals to regain there animal selfs. Makes use of responsive design for different screen sizes.</p>
             <nav><a href=""></a></nav>
