add contact & project pages, improve style and nav

--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,42 @@
     <head>
         <link rel="stylesheet" href="./resources/css/reset.css">
         <link rel="stylesheet" href="./resources/css/style.css">
+        <link rel="stylesheet" href="./resources/css/all.min.css">
+        <link rel="stylesheet" href="./resources/css/contact.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400&family=Kufam:wght@400;700&family=Red+Hat+Text:ital,wght@0,300;0,400;0,700;1,400;1,700&family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
         <title>Jules B. Hearne Contact</title>
     </head>
     <body>
-        
+        <header>
+            <h1>
+                <div class="name"><a href="./index.html">Jules B. Hearne</a></div>
+                <div class="portfolio"><a href="./projects.html">Portfolio</a></div>
+            </h1>
+            <nav>
+                <a href="./index.html">Home</a>
+                <a href="./projects.html">Projects</a>
+            </nav>
+            <div class="self_portrait"><a href="./contact.html"><img src="./resources/images/self.jpg" alt="Image of Jules"></a></div>
+        </header>
+        <section class="contact">
+            <h2>Contact Me</h2>
+            <p>Based in <span id="growKC">Kansas City, MO</span>.</p>
+            <div>
+              
+              <a href="https://github.com/jbhearne"><i class="fab fa-github icon"></i></a>
+              <a href="cribage4ever@gmail.com"><i class="fas fa-envelope-square icon"></i></a>
+            </div>
+            <div class="kc">
+                <img src="./resources/images/kc2.png" alt="Kansas City Lines">
+            </div>
+        </section>
+        <footer>
+            <div class="copyright">© Jules B. Hearne</div>
+            <nav>
+                <a href="./projects.html">Projects</a> | 
+                <a href="./index.html">Home</a></nav>
+        </footer>
     </body>
 </html>
