--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
     <body>
         <header>
             <h1>
-                <div class="name">Jules B. Hearne</div>
-                <div class="portfolio">Portfolio</div>
+                <div class="name"><a href="./index.html">Jules B. Hearne</a></div>
+                <div class="portfolio"><a href="./projects.html">Portfolio</a></div>
             </h1>
-            <nav><a href="./contact.html">Contact Me</a></nav>
-            <div class="self_portrait"><img src="./resources/images/self.jpg" alt="Image of Jules"></div>
+            <nav>
+                <a href="./projects.html">Projects</a>
+                <a href="./contact.html">Contact Me</a>
+            </nav>
+            <div class="self_portrait"><a href="./contact.html"><img src="./resources/images/self.jpg" alt="Image of Jules"></a></div>
         </header>
         <section class="intro" id="intro">
             <h2>Developing New Skills in Programming</h2>
@@ -101,7 +104,10 @@
         </section>
         <footer>
             <div class="copyright">© Jules B. Hearne</div>
-            <nav><a href="./contact.html">Contact Me</a></nav>
+            <nav>
+                <a href="./projects.html">Projects</a> | 
+                <a href="./contact.html">Contact Me</a>
+            </nav>
         </footer>
     </body>
 </html>
