--- a/projects.html
+++ b/projects.html
@@ -3,9 +3,99 @@
     <head>
         <link rel="stylesheet" href="./resources/css/reset.css">
         <link rel="stylesheet" href="./resources/css/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400&family=Kufam:wght@400;700&family=Red+Hat+Text:ital,wght@0,300;0,400;0,700;1,400;1,700&family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
         <title>Jules B. Hearne Projects</title>
     </head>
     <body>
+        <header>
+            <h1>
+                <div class="name"><a href="./index.html">Jules B. Hearne</a></div>
+                <div class="portfolio"><a href="./projects.html">Portfolio</a></div>
+            </h1>
+            <nav>
+                <a href="./index.html">Home</a>
+                <a href="./contact.html">Contact Me</a></nav>
+                <div class="self_portrait"><a href="./contact.html"><img src="./resources/images/self.jpg" alt="Image of Jules"></a></div>
+        </header>
+        <section class="project" id="project01">
+            <img src="./resources/images/mixed_messages.PNG" alt="Mixed Messages Screenshot">
+            <div class="details">
+            <h2>Mixed Messages</h2>
+            <h3>Node.js Program</h3>
+            <ul>
+                <h4>Languages:</h4>
+                <li>JavaScript</li>
+            </ul>
+            <p>This Node.js project parses a list of famous quotes and diplays three mixed up quotes.</p>
+            <nav><a href="https://github.com/jbhearne/Mixed_Messages">GitHub</a></nav>
+            </div>
+        </section>
+        <section class="project" id="project02">
+            <img src="./resources/images/Globodrank.PNG" alt="Globodrank Screenshot">
+            <div class="details">
+                <h2>GloboDrank LLC</h2>
+                <h3>Website for a Fictional Company</h3>
+                <ul>
+                    <h4>Languages:</h4>
+                    <li>HTML</li>  
+                    <li>CSS</li>
+                </ul>
+                <p>This website was deveoped to make use of the Flexbox model of design</p>
+                <nav><a href=""></a></nav>
+            </div>
+        </section>
+        <section class="project" id="project03">
+            <img src="./resources/images/AFC.PNG" alt="Ainamal Fight Club Screenshot">
+            <div class="details">
+            <h2>Animal Fight Club</h2>
+            <h3>Website for Fictional Club</h3>
+            <ul>
+                <h4>Languages:</h4>
+                <li>HTML</li>
+                <li>CSS</li>
+            </ul>
+            <p>A website for a fictional club for animals to regain there animal selfs. Makes use of responsive design for different screen sizes.</p>
+            <nav><a href=""></a></nav>
+            </div>
+        </section>
+        <section class="project" id="project_more">
+            <img src="./resources/images/dotdotdot.png" alt="">
+            <div class="details">
+            <h2>Future Projects</h2>
+            <h3>More Projects to Come</h3>
+            <ul>
+                <h4>Languages:</h4>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+                <li>SQL</li>
+                <li>React</li>
+                <li>more</li>
+            </ul>
+            <p>More projects will be posted as I continue my education.</p>
+            <nav><a href=""></a></nav>
+            </div>
+        </section>
+        <!--<section class="project" id="project04">
+            <img src="" alt="">
+            <div class="details">
+            <h2></h2>
+            <h3></h3>
+            <ul>
+                <h4>Languages:</h4>
+                <li></li>
+                <li></li>
+            </ul>
+            <p></p>
+            <nav><a href=""></a></nav>
+            </div>
+        </section>-->
+        <footer>
+            <div class="copyright">© Jules B. Hearne</div>
+            <nav><a href="./index.html">Home</a> | <a href="./contact.html">Contact Me</a></nav>
+        </footer>
         
     </body>
 </html>
