img update, css adjustments

--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400&family=Kufam:wght@400;700&family=Red+Hat+Text:ital,wght@0,300;0,400;0,700;1,400;1,700&family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
         <title>Jules B. Hearne Contact</title>
+        
     </head>
     <body>
         <header>
@@ -24,15 +25,16 @@
         </header>
         <section class="contact">
             <h2>Contact Me</h2>
-            <p>Based in <span id="growKC">Kansas City, MO</span>.</p>
+            <p>Based in <span id="grow_KC"">Kansas City, MO</span>.</p>
             <div>
               
               <a href="https://github.com/jbhearne"><i class="fab fa-github icon"></i></a>
-              <a href="cribage4ever@gmail.com"><i class="fas fa-envelope-square icon"></i></a>
+              <a  href="mailto:cribage4ever@gmail.com"><i class="fas fa-envelope-square icon"></i></a>
             </div>
-            <div class="kc">
-                <img src="./resources/images/kc2.png" alt="Kansas City Lines">
+            <div class="kc" id="kc">
+                <img id="kc_image" src="./resources/images/kc2.png" alt="Kansas City Lines">
             </div>
+            <script src="./resources/scripts/interactive.js"></script>
         </section>
         <footer>
             <div class="copyright">© Jules B. Hearne</div>
