--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </div>
         </section>
         <section class="project" id="project03">
-            <img src="./resources/images/AFC.PNG" alt="Ainamal Fight Club Screenshot">
+            <img src="./resources/images/AFC2.PNG" alt="Ainamal Fight Club Screenshot">
             <div class="details">
             <h2>Animal Fight Club</h2>
             <h3>Website for Fictional Club</h3>
